Fix there not being enough spacing between Collection's checkboxes and sort button

--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -16,7 +16,7 @@ header {
 		@include flex-row;
 		gap: 16px;
 		position: absolute;
-		right: 300px;
+		right: 350px;
 	}
 
 	> #sortBtn {
